<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SampleCBR</string>
    <string name="action_settings">Settings</string>

    <string name="auto_focus">Auto Focus</string>
    <string name="light">Light</string>
    <string name="sound">Sound</string>

    <string name="resolution">Resolution</string>
    <string name="preset">Decoder Preset</string>
    <string name="colorType">Color Type</string>
    <string name="codingType">Coding Type</string>
    <string name="downscale_title">Downscale</string>
    <string name="downscale_on">Downscale ON</string>
    <string name="downscale_off">Downscale OFF</string>


</resources>
